--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/.bin/nodemon server.js",
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "Rafael Bernardo <rafamaxber@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
-    "graphql": "^0.11.7",
-    "axios": "^0.17.1"
+    "graphql": "^0.11.7"
   },
   "devDependencies": {
+    "jest-cli": "^21.2.1",
     "nodemon": "^1.12.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
