--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "graphql": "^0.11.7"
   },
   "devDependencies": {
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "jest-cli": "^21.2.1",
     "nodemon": "^1.12.5"
   },
