--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "^4.13.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "jest-cli": "^21.2.1",
+    "jest-cli": "^21.2.1"
   },
   "jest": {
     "testEnvironment": "node",
