--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon server.js",
+    "start": "node server.js",
+    "dev": "./node_modules/.bin/nodemon server.js",
     "test": "jest",
     "test:tdd": "jest --watchAll",
     "test:coverage": "jest --coverage"
