update travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ deploy:
   provider: heroku
   api_key: 984b6517-b2f6-4b6a-a907-e38ad14b24f9
   app: marvelapigraphql
+cache:
+  directories:
+    - "node_modules"
