--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "./node_modules/.bin/nodemon server.js",
     "test": "jest",
-    "test:tdd": "jest --watchAll",
+    "test:tdd": "jest --coverage --watchAll",
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "graphql": "^0.11.7"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.10.0",
     "eslint": "^4.13.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
