--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ node_js:
   - "8"
 deploy:
   provider: heroku
-  api_key: 984b6517-b2f6-4b6a-a907-e38ad14b24f9
-  app: marvelapigraphql
+  api_key: HEROKU_APP_ID
+  app: HEROKU_APP_NAME
 cache:
   directories:
     - "node_modules"
+
+
+    
+
+    
