test code climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,14 @@ deploy:
 cache:
   directories:
   - node_modules
-branches:
-  only: 
-    - master
+env:
+  global:
+    - CC_TEST_REPORTER_ID = $MY_CC_TEST_REPORTER_ID
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - npm run test:coverage
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
