--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
 language: node_js
 node_js:
 - '8'
-deploy:
-  provider: heroku
-  api_key: $HEROKU_APP_ID
-  app: $HEROKU_APP_NAME
-cache:
-  directories:
-  - node_modules
 env:
   global:
-    - CC_TEST_REPORTER_ID = $MY_CC_TEST_REPORTER_ID
+    - CC_TEST_REPORTER_ID=370136a07880d7bfc0536173e2674d334176123a5111abfe25ff0646b4ea005d
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
@@ -19,3 +12,10 @@ script:
   - npm run test:coverage
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+deploy:
+  provider: heroku
+  api_key: $HEROKU_APP_ID
+  app: $HEROKU_APP_NAME
+cache:
+  directories:
+  - node_modules
