add codeclimate and snik badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
 - '8'
+branches:
+  only: 
+    - master
 env:
   global:
     - CC_TEST_REPORTER_ID=370136a07880d7bfc0536173e2674d334176123a5111abfe25ff0646b4ea005d
