--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,7 @@ deploy:
   provider: heroku
   api_key: "$HEROKU_APP_ID"
   app: "$HEROKU_APP_NAME"
+cache:
+  yarn: true
+  directories:
+    - "node_modules"
