--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-    "extends": "airbnb-base",
-    "env": {
-      "browser": false,
-      "jest": true,
-      "node": true
-    }
+  "extends": ["plugin:prettier/recommended"]
 }
