--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "./node_modules/.bin/nodemon server.js",
+    "start": "npm run build && cd app && node index.js",
+    "dev": "nodemon --exec npm run babel-node -- src/index.js",
+    "build": "npm run rimraf && babel src -d app",
+    "babel-node": "babel-node --presets=env",
+    "rimraf": "rimraf app",
     "test": "jest",
     "test:tdd": "jest --coverage --watchAll",
     "test:coverage": "jest --coverage",
-    "precommit": "npm test",
+    "precommit": "lint-staged",
     "prepush": "npm test"
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "keywords": [],
   "author": "Rafael Bernardo <rafamaxber@gmail.com>",
@@ -20,15 +29,22 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
-    "graphql": "^0.11.7"
+    "graphql": "^0.11.7",
+    "graphql-import": "^0.6.0",
+    "merge-graphql-schemas": "^1.5.2"
   },
   "devDependencies": {
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
+    "babel-preset-env": "^1.7.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.1",
     "husky": "^0.14.3",
     "jest-cli": "^21.2.1",
-    "nodemon": "^1.12.5"
+    "lint-staged": "^7.2.0",
+    "nodemon": "^1.12.5",
+    "prettier": "^1.13.5"
   },
   "jest": {
     "testEnvironment": "node",
