--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.7",
     "graphql-import": "^0.6.0",
+    "memory-cache": "^0.2.0",
     "merge-graphql-schemas": "^1.5.2"
   },
   "devDependencies": {
