--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": ""
+    "dev": "nodemon src/index.ts",
+    "build": "",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Rafael Bernardo <rafamaxber@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "merge-graphql-schemas": "^1.5.2"
+    "axios": "^0.18.0",
+    "graphql-yoga": "^1.17.4",
+    "merge-graphql-schemas": "^1.5.8"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
+    "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -24,9 +29,12 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^24.6.0",
+    "jest-cli": "^24.6.0",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "sucrase": "^3.10.1",
+    "ts-jest": "^24.0.1",
     "typescript": "^3.4.1"
   }
 }
