--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "prod": "npm run build && node app/index.js",
-    "test": "jest --no-cache"
+    "test": "jest --no-cache",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "Rafael Bernardo <rafamaxber@gmail.com>",
@@ -18,6 +19,7 @@
     "merge-graphql-schemas": "^1.5.8"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
